--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,9 @@
     },
     "emmet.excludeLanguages": [
         "markdown"
-    ]
+    ],
+    "workbench.colorCustomizations": {
+        "titleBar.activeBackground": "#F54133",
+        "titleBar.inactiveBackground": "#F54133"
+    }
 }
